# crm-rs

./: Cargo.toml  _typos.toml  cliff.toml  deny.toml
.github/workflows/: build.yml
crm/: Cargo.toml  build.rs  crm.yml
crm-metadata/: Cargo.toml  build.rs
crm-metadata/src/: config.rs  lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: metadata.rs  mod.rs
crm-metadata/tests/: Server.rs
crm-notification/: Cargo.toml  build.rs
crm-notification/src/: config.rs  lib.rs  main.rs
crm-notification/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm-notification/src/pb/: notification.rs
crm-notification/tests/: Server.rs
crm/src/: client.rs  config.rs  lib.rs  server.rs
crm/src/abi/: auth.rs  crm.rs  mod.rs
crm/src/pb/: crm.rs
fixtures/: cert.pem  key.pem  rootCA.pem  token
protos/crm/: crm.proto  messages.proto  rpc.proto
protos/metadata/: messages.proto  rpc.proto
protos/notification/: messages.proto  rpc.proto
protos/user-stats/: messages.proto  rpc.proto
user-stat/: Cargo.toml  build.rs
user-stat/examples/: gen.rs
user-stat/migrations/: 20250324081930_init.sql  20250324122212_add_index.sql
user-stat/src/: config.rs  lib.rs  main.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: user_stats.rs
user-stat/tests/: server.rs
