[workspace]
members = ["crm"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.97"
prost = "0.13.5"
prost-build = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.12.3", features = ["zstd", "tls"] }
tonic-build = "0.12.3"
