[package]
name = "crm-notification"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default=[]
test_utils=["fake"]

[dependencies]
anyhow = { workspace = true }
chrono = {workspace = true }
crm-metadata = { workspace = true}
futures = { workspace = true }
fake = { version = "4.2.0", features = ["derive", "chrono"] ,optional = true}
uuid = { version = "1.16.0", features = ["v4"] }
prost = { workspace = true }
prost-types = { workspace = true }
serde={workspace = true}
serde_yaml = { workspace = true }
tonic = { workspace = true }
tokio= { workspace = true }
tracing-subscriber = {workspace = true}
tracing = {workspace = true}
tokio-stream = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
chrono = {workspace = true }
crm-notification = { workspace = true,features = ["test_utils"]}
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde={workspace = true}
serde_yaml = { workspace = true }
tonic = { workspace = true }
tokio= { workspace = true }
tokio-stream = { workspace = true }
