[package]
name = "crm"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = { workspace = true }
chrono = {workspace = true }
derive_builder = {workspace = true }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde={workspace = true}
serde_yaml = { workspace = true }
tonic = { workspace = true }
tokio= { workspace = true }
tokio-stream = { workspace = true }
sqlx={workspace = true}
sqlx-db-tester = { version = "0.5.0" ,optional = true}
itertools = {workspace = true}
tracing-subscriber = {workspace = true}
tracing = {workspace = true}
crm-metadata = {workspace = true}
crm-notification = {workspace = true}
user-stat = {workspace = true}
uuid = { version = "1.16.0", features = ["v4"] }

[build-dependencies]
anyhow = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }
