[package]
name = "user-stat"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
chrono = {workspace = true }
derive_builder = "0.20.2"
futures = "0.3.31"
prost = { workspace = true }
prost-types = { workspace = true }
serde={workspace = true}
serde_yaml = { workspace = true }
tonic = { workspace = true }
tokio= { workspace = true }
sqlx={workspace = true}
itertools = "0.14.0"
tracing-subscriber = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
anyhow={workspace = true}
fake = { version = "4.2.0", features = ["derive", "chrono"] }
nanoid = "0.4.0"
rand = "0.9.0"
serde = {workspace = true }
sqlx = {workspace = true }
tokio = { workspace = true }


[build-dependencies]
anyhow = { workspace = true }
proto-builder-trait = "0.6.2"
tonic-build = { workspace = true }
