[package]
name = "user-stat"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default=[]
test_utils=["sqlx-db-tester"]

[dependencies]
anyhow = { workspace = true }
chrono = {workspace = true }
derive_builder = {workspace = true }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde={workspace = true}
serde_yaml = { workspace = true }
tonic = { workspace = true }
tokio= { workspace = true }
sqlx={workspace = true}
sqlx-db-tester = { version = "0.5.0" ,optional = true}
itertools = {workspace = true}
tracing-subscriber = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
chrono = {workspace = true }
derive_builder = {workspace = true }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde_yaml = { workspace = true }
tonic = { workspace = true }
itertools = {workspace = true}
anyhow={workspace = true}
fake = { version = "4.2.0", features = ["derive", "chrono"] }
nanoid = "0.4.0"
rand = {workspace = true }
user-stat= { workspace = true,features = ["test_utils"] }
serde = {workspace = true }
sqlx = {workspace = true }
tokio = { workspace = true }


[build-dependencies]
anyhow = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }
